ch9/ch9-start/iac-macro-usage/tests/fails/lambda_negative_time.stderr
error: memory needs a positive value <= 10240
 --> tests/fails/lambda_negative_time.rs:5:25
  |
5 |         lambda name mem -10
  |                         ^
